--- a/gradle.properties
+++ b/gradle.properties
@@ -26,10 +26,12 @@ loader_version_range=[47,)
 #
 # Parchment is an unofficial project maintained by ParchmentMC, separate from Minecraft Forge.
 # Additional setup is needed to use their mappings, see https://parchmentmc.org/docs/getting-started
-mapping_channel=official
+#mapping_channel=official
+mapping_channel=parchment
+mapping_version=2023.09.03-1.20.1
 # The mapping version to query from the mapping channel.
 # This must match the format required by the mapping channel.
-mapping_version=1.20.1
+#mapping_version=1.20.1
 # The unique mod identifier for the mod. Must be lowercase in English locale. Must fit the regex [a-z][a-z0-9_]{1,63}
 # Must match the String constant located in the main mod class annotated with @Mod.
 mod_id=i_love_soil
@@ -47,3 +49,6 @@ mod_group_id=org.eve
 mod_authors=
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
 mod_description=
+
+# dependencies
+registrate_version=MC1.20-1.3.11
