--- a/build.gradle
+++ b/build.gradle
@@ -149,15 +149,29 @@ repositories {
             includeGroup("com.tterrag.registrate")
         }
     }
+    maven {
+        // Curse Forge File
+        url "https://cursemaven.com/"
+        content {
+           includeGroup "curse.maven"
+        }
+    }
 }
 
 dependencies {
+
+    implementation fg.deobf("curse.maven:resourceful-lib-570073:5659871")
     // Specify the version of Minecraft to use.
     // Any artifact can be supplied so long as it has a "userdev" classifier artifact and is a compatible patcher artifact.
     // The "userdev" classifier will be requested and setup by ForgeGradle.
     // If the group id is "net.minecraft" and the artifact id is one of ["client", "server", "joined"],
     // then special handling is done to allow a setup of a vanilla dependency without the use of an external repository.
     minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
+
+    compileOnly(annotationProcessor("io.github.llamalad7:mixinextras-common:0.4.1"))
+    implementation(jarJar("io.github.llamalad7:mixinextras-forge:0.4.1")) {
+        jarJar.ranged(it, "[0.4.1,)")
+    }
 
     // Example mod dependency with JEI - using fg.deobf() ensures the dependency is remapped to your development mappings
     // The JEI API is declared for compile time use, while the full JEI artifact is used at runtime
