--- a/build.gradle
+++ b/build.gradle
@@ -158,12 +158,14 @@ repositories {
     }
 }
 
+
 dependencies {
 
     implementation fg.deobf("curse.maven:spark-361579:4738952")
 
     // do i really need this lmao
-    implementation fg.deobf("curse.maven:resourceful-lib-570073:5659871")
+    //implementation fg.deobf("curse.maven:resourceful-lib-570073:5659871")
+
     // Specify the version of Minecraft to use.
     // Any artifact can be supplied so long as it has a "userdev" classifier artifact and is a compatible patcher artifact.
     // The "userdev" classifier will be requested and setup by ForgeGradle.
@@ -182,6 +184,8 @@ dependencies {
     // compileOnly fg.deobf("mezz.jei:jei-${mc_version}-forge-api:${jei_version}")
     // runtimeOnly fg.deobf("mezz.jei:jei-${mc_version}-forge:${jei_version}")
     implementation fg.deobf("com.tterrag.registrate:Registrate:${registrate_version}")
+    //jarJar(group: 'com.tterrag.registrate', name: 'Registrate', version: "[MC1.19.3,MC1.20.1)")
+    jarJar(group: 'com.tterrag.registrate', name: 'Registrate', version: '[MC1.20-1.3.11]')
 
     // Example mod dependency using a mod jar from ./libs with a flat dir repository
     // This maps to ./libs/coolmod-${mc_version}-${coolmod_version}.jar
@@ -195,6 +199,14 @@ dependencies {
     annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
 
 }
+
+jarJar.enable()
+
+reobf {
+    jarJar { }
+}
+
+tasks.jarJar.finalizedBy('reobfJarJar')
 
 // This block of code expands all declared replace properties in the specified resource targets.
 // A missing property will result in an error. Properties are expanded using ${} Groovy notation.
